# seek-pagination

./: Cargo.toml
.cargo/: config
public/: index.html  offset.html
public/scripts/: client.js
src/: main.rs  models.rs  repositoy.rs
