[package]
name = "orders-api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio-postgres = { "version" = "0.7.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.10.3"
chrono = { version = "0.4.23", features = ["serde"] }